# Papers2Code

./: .dockerignore  .env.example  .env.performance.example  .gitignore  .npmrc  .vercelignore  ARXIV_MIGRATION.md  DEPLOYMENT_SUMMARY.md  DEPLOY_VERCEL.md  DOCKER-DEV-SETUP.md  Dockerfile  Dockerfile.dev  GEMINI.md  NOTES.md  OAUTH_INTEGRATION_CHECKLIST.md  OPENSOURCE_SECURITY.md  PRODUCTION_READY_SUMMARY.md  README.md  SECURITY.md  START_HERE.md  TAILWIND_MIGRATION_COMPLETE.md  TAILWIND_MIGRATION_FINAL.md  TAILWIND_MIGRATION_STATUS.md  TAILWIND_MIGRATION_SUMMARY.md  TODO.md  VERCEL_SETUP_COMPLETE.md  app.py  check_db_content.py  copy_prod_data_to_test.py  docker-compose.dev.yml  docker_run.py  fix_implementation_progress_indexes.py  fly.toml  main.py  migrate_snake_to_camel.py  package-lock.json  package.json  process_pwc_data.py  pyproject.toml  quick_performance_test.py  (+16 more)
.github/: SECURITY_POLICY.md  copilot-instructions.md
SECURITY_INFO/: SECURITY_ARCHITECTURE.md  SECURITY_INDEX.md
api/: index.py  requirements.txt
app/: __init__.py  config.py  db.py  models.py
backups/: README.md
db/: annotate_1k_openai.py  copy_prod_data_to_test.py  paper_annotator.py  update_pwc_data.py
dev-config/: dex-config.yaml  dex_personas.json
docs/: COMPLEXITY_ANALYSIS.md  GOOGLE_OAUTH_SECURITY_SUMMARY.md  GOOGLE_OAUTH_SETUP.md  README.md  REORGANIZATION_GUIDE.md
papers2code-ui/: .env.example  .npmrc  .vercelignore  ARCHITECTURE.md  Dockerfile.dev  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml.backup  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
papers2code_app/: __init__.py  config.py  extensions.py  models.py  utils.py
papers2code_app2/: auth.py  (+19 more)
(+460 files in other folders)
